Changed implementation from THREE Audio to Native web audio due to an issue on IOS devices, THREE JS Audio does not work there.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -494,6 +494,14 @@ form {
   scale: 1.2;
 }
 
+#main-audio {
+  opacity: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+}
+
 @keyframes pulsating {
   0% {
     transform: scale(1);
